visual recognition config

--- a/config.cfg
+++ b/config.cfg
@@ -6,6 +6,7 @@ ttsPassword = zyzBtEqo73D7
 convoUser = 154b5b29-d1ca-4ff2-be09-c33c5e1d9e20
 convoPassword = pmNftYlpvMS8
 convoWorkSpace = da21184b-ae02-4159-9727-d994fc1bbaaf
+visualApi = e4a3fcdf721e7c5c7fc8442fd854b0eb147f9067
 
 [Bioloid Information]
 name = Arthur
