Cody did good on the config :)

--- a/config.cfg
+++ b/config.cfg
@@ -11,4 +11,4 @@ visualApi = e4a3fcdf721e7c5c7fc8442fd854b0eb147f9067
 [Bioloid Information]
 name = Arthur
 timeoutWarning = 60
-timoutShutdown = 120
+timeoutShutdown = 120
