Removing Old Audio files Changed TTS To save audio files Cleaned it up a bit Changed main to look for homophones of the name this can be added in soundsLike

--- a/config.cfg
+++ b/config.cfg
@@ -10,5 +10,6 @@ visualApi = e4a3fcdf721e7c5c7fc8442fd854b0eb147f9067
 
 [Bioloid Information]
 name = Arthur
+soundsLike = arthur,artar
 timeoutWarning = 60
 timeoutShutdown = 120
