--- a/config.cfg
+++ b/config.cfg
@@ -10,6 +10,6 @@ visualApi = e4a3fcdf721e7c5c7fc8442fd854b0eb147f9067
 
 [Bioloid Information]
 name = Arthur
-soundsLike = arthur,artar,our ther,are there,our third, our there,are third,are ther,are sir,our sir
+soundsLike = arthur,artar,our ther,are there,our third, our there,are third,are ther,are sir,our sir,tell me
 timeoutWarning = 60
 timeoutShutdown = 120
