--- a/config.cfg
+++ b/config.cfg
@@ -9,7 +9,8 @@ convoWorkSpace = 2b33f88a-ad6a-4362-bf51-01ff8a56ea72
 visualApi = e4a3fcdf721e7c5c7fc8442fd854b0eb147f9067
 
 [Bioloid Information]
-name = Arthur
-soundsLike = arthur,artar,our ther,are there,our third, our there,are third,are ther,are sir,our sir,tell me
+name = Hedy
+soundsLike = hedy,heady,head E,heidi,head D, head dee, head bee,tell me
+soundsLikeArth = arthur,artar,our ther,are there,our third, our there,are third,are ther,are sir,our sir,tell me
 timeoutWarning = 60
 timeoutShutdown = 120
