--- a/config.cfg
+++ b/config.cfg
@@ -10,7 +10,7 @@ visualApi = e4a3fcdf721e7c5c7fc8442fd854b0eb147f9067
 
 [Bioloid Information]
 name = Hedy
-soundsLike = hedy,heady,head E,heidi,head D, head dee, head bee,tell me,he de, he'd,he did,he
+soundsLike = hedy,heady,head E,heidi,head D, head dee, head bee,tell me,he de, he'd,he did,he,TV
 soundsLikeArth = arthur,artar,our ther,are there,our third, our there,are third,are ther,are sir,our sir,tell me
 timeoutWarning = 60
 timeoutShutdown = 120
